idea/testData/multiModuleHighlighting/multiplatform/basic/common/common.kt
header class <error descr="[HEADER_WITHOUT_IMPLEMENTATION] Header declaration 'My' has no implementation in module for JVM">My</error> {

}